<resources>
    <string name="app_name">视频播放演示</string>
    <string name="mediaPlayer_local">MediaPlayer播放本地视频</string>
    <string name="mediaPlayer_url">MediaPlayer播放在线视频</string>
    <string name="videoView">VideoView播放视频（本地/在线）</string>
    <string name="vitamio_url">Vitamio播放在线视频</string>
    <string name="vitamio_live">Vitamio播放直播视频</string>
    <string name="vitamio_url_mp4">Vitamio播放在线视频.mp4</string>
    <string name="vitamio_url_flv">Vitamio播放在线视频.flv</string>
    <string name="vitamio_url_avi">Vitamio播放在线视频.avi</string>
    <string name="vitamio_live_rtmp">Vitamio播放直播视频.rtmp</string>
    <string name="vitamio_live_m3u8">Vitamio播放直播视频.m3u8</string>
    <string name="videoView_play">播放</string>
    <string name="videoView_pause">暂停</string>

    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>

</resources>
